# vane_ui

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .swp  Dockerfile  Dockerfile.CVP  Dockerfile.build-CVP  Makefile  README.md  app.py  config.toml  cov.xml  definitions.yaml  device_list.txt  install_vane.sh  license.txt  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  show_running_config.py  tox.ini  tst.py  vane-cvp_cvpinstall.spec
.github/: pull_request_template.md
ci/: Dockerfile.ci
nrfu_tests/: conftest.py  master_def.yaml  test_acls_api_access_list.py  test_base_services_redundancy_sso_test.py  test_definition.yaml  test_definition.yaml.j2  test_interfaces_description_status.py  test_interfaces_errdisabled.py  test_interfaces_mlag_status_check.py  test_interfaces_port_channels.py  test_routing_bgp_evpn_peers_state.py  test_security_rp_api_access_list.py  test_security_rp_eos_no_config_test.py  test_security_rp_ssh_access_list.py  test_system_hardware_coredump.py  test_system_hardware_inventory.py
ovpn_profiles/: eosplus-act.ovpn
reports/: test_definition.yaml
resources/: vane-bashrc
sample_network_tests/: definitions.yaml  duts.yaml  master_def.yaml
showparsers/: _switchconfig.py  show_running_config.py
src/: reports..json  setup.py
tests/: conftest.py  test_report.py  test_spreadsheet.py  test_tests_client.py  test_vane.py
vane/: .pylintrc  __init__.py  config.py  csv2doc.py  definitions.yaml  device_interface.py  fixtures.py  gen_configs_from_avd.py  gen_duts_from_cvp.py  logger.py  test_ping.py  (+12 more)
(+622 files in other folders)
